Fix awards alignment

--- a/src/components/Awards/awards.scss
+++ b/src/components/Awards/awards.scss
@@ -6,7 +6,7 @@
   }
 
   &-list {
-    @apply flex flex-col;
+    @apply flex flex-col items-center;
     @screen sm {
       @apply flex-row justify-evenly;
     }
